# taskQuester

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  database.py  main.py  models.py  orm.py  scheduler.py
src/assets/: gpt_schema.yaml  oauth2_google_client.json
src/contrib/: init.sql
src/dependecies/: core.py
src/jobs/: sync_google_events_job.py  sync_google_tasks_job.py
src/schemas/: Category.py  Event.py  Task.py
src/seeders/: category_seeder.py
src/services/: fastapi_app.py  google_service.py
src/services/dto/: CategoryDTO.py
src/utils/: arguments.py  date.py  sync_utils.py
