[tool.poetry]
name = "habitica"
version = "0.1.0"
description = ""
authors = ["Adam Zugiraev <adam.zugiraev@onlinesup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.18"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
pydantic = {extras = ["email"], version = "^2.6.3"}
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pymysql = "^1.1.0"
asyncmy = "^0.2.9"
cryptography = "^42.0.4"
typing-extensions = "^4.9.0"
aiohttp = "^3.9.3"
aiofiles = "^23.2.1"
pathlib = "^1.0.1"
async-lru = "^2.0.4"
aiogoogle = "^5.6.0"
aioschedule = "^0.5.2"
sqlalchemyseed = "^2.0.0"
pytz = "^2024.1"
python-dateutil = "^2.9.0.post0"
google-auth-oauthlib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
